--- a/gb/19/5/21/n11270735.md
+++ b/gb/19/5/21/n11270735.md
@@ -1,49 +1,57 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/szzd1/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/szzd1/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/szzd1/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/szzd1/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/szzd1/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/szzd1/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/szzd1/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/szzd1/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/szzd1/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2>Ì¨ÐÂÔö3Àý³¦²¡¶¾ Äê¼Í×îÐ¡³õÉú5ÌìÄÐÓ¤¡¡</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/05/cb4da884860ea071bd9959c98356ca4d-600x400.jpg" />
-<h6>¼²¹ÜÊðÒßÇéÖÐÐÄ¸±Ö÷ÈÎ¹ùºêÎ°Ðû²¼£¬ÉÏÖÜÐÂÔö3Ãû³¦²¡¶¾²¢·¢ÖØÖ¢£¬¶¼ÊÇÓ¤Ó×¶ù£¬ÌáÐÑÃñÖÚÁôÒâ¼ÒÖÐÓ×¶ù½¡¿µ¡£ £¨ÖÐÑëÉçÌá¹©£©
-</h6>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/nuje2873/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/nuje2873/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/nuje2873/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>å°æ–°å¢ž3ä¾‹è‚ ç—…æ¯’ å¹´çºªæœ€å°åˆç”Ÿ5å¤©ç”·å©´ã€€</h2>
+
+<h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê05ÔÂ21ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÀµçäÈãÌ¨ÍåÌ¨±±±¨µ¼£©Ì¨ÍåÐÂÔö3Àý<a href="https://github.com/szzd1/djy/blob/master/gb/tag/%E8%82%A0%E7%97%85%E6%AF%92.md">³¦²¡¶¾</a>²¢·¢<a href="https://github.com/szzd1/djy/blob/master/gb/tag/%E9%87%8D%E7%97%87.md">ÖØÖ¢</a>²¡Àý¡£<a href="https://github.com/szzd1/djy/blob/master/gb/tag/%E7%96%BE%E7%AE%A1%E7%BD%B2.md">¼²¹ÜÊð</a>±íÊ¾£¬3Ãû³¦²¡¶¾²¢·¢ÖØÖ¢²¡Àý·Ö±ðÎª±±²¿1ËêÄÐÍ¯¡¢ÖÐ²¿µÄÐÂÉú<a href="https://github.com/szzd1/djy/blob/master/gb/tag/%E7%94%B7%E5%A9%B4.md">ÄÐÓ¤</a>¼°ÄÏ²¿6ËêÅ®Í¯¡£ÖÐ²¿ÐÂÉúÄÐÓ¤Îª½ñÄêÄê¼Í×îÐ¡µÄ³¦²¡¶¾ÖØÖ¢¸ö°¸£¬ÄÐÓ¤¸Õ³öÉú5Ììºó£¬³öÏÖ·¢ÉÕ¡¢»î¶¯Á¦²»¼ÑÇéÐÎ£¬¾­¼ìÑéÉó²é£¬È·ÈÏÎªÒÁ¿Æ²¡¶¾11ÐÍ¸ÐÈ¾²¢·¢ÖØÖ¢£¬Ä¿Ç°³ÖÐøÔÚÒ½ÔºÖÎÁÆÖÐ¡£</p>
-<p>±±²¿1ËêÄÐÍ¯ÓÐ·¢ÉÕ¡¢Å»ÍÂ¼°ÏÂÖ«ÎÞÁ¦µÈÖ¢×´£¬¾­¼ìÑéÉó²é£¬È·ÈÏÎª<a href="https://github.com/szzd1/djy/blob/master/gb/tag/%E8%82%A0%E7%97%85%E6%AF%92.md">³¦²¡¶¾</a>71ÐÍ¸ÐÈ¾²¢·¢<a href="https://github.com/szzd1/djy/blob/master/gb/tag/%E9%87%8D%E7%97%87.md">ÖØÖ¢</a>£¬Ä¿Ç°ÒÑ³öÔº£¬³ÖÐøÃÅÕï×·×Ù¡£ÄÏ²¿6ËêÅ®Í¯ÔòÓÐ·¢ÉÕ¡¢³öÕî¡¢Ëµ»°Ä£ºý²»Çå¼°²½Ì¬²»ÎÈµÈÖ¢×´£¬¾­¼ìÑéÉó²é£¬È·ÈÏÎª¿ËÉ³ÆæA9ÐÍ²¡¶¾¸ÐÈ¾²¢·¢ÖØÖ¢£¬ËùÐÒ»Ö¸´ÇéÐÎÁ¼ºÃ²¢ÒÑ³öÔº¡£</p>
-<p><a href="https://github.com/szzd1/djy/blob/master/gb/tag/%E7%96%BE%E7%AE%A1%E7%BD%B2.md">¼²¹ÜÊð</a>·ÀÒßÒ½Ê¦ÁÖÓ½Çà±íÊ¾£¬µ÷²é·¢ÏÖ£¬3¸ö°¸²»ÅÅ³ýÊÇÒòÔÚ¹«¹²³¡Ëù½Ó´¥»ò±»Ã»ÓÐÖ¢Õ÷µÄ³ÉÈË´«È¾¡£</p>
-<p>ÁÖÓ½ÇàÌáÐÑ£¬ÌìÆøÖð½¥ÉýÎÂ£¬Á¬´øÓ°Ïì³¦²¡¶¾»îÔ¾¶ÈÒ²ÌáÉý£¬Òò³ÉÈË¸ÐÈ¾³¦²¡¶¾Í¨³£Ã»ÓÐÃ÷ÏÔÖ¢×´£¬½ÏÈÝÒ×ÊèÓÚ·À»¤¶ø´«È¾³¦²¡¶¾¸ø¼ÒÖÐÓ×¶ù¡£½¨ÒéÃñÖÚÍâ³ö·µ¼Òºó£¬Îñ±ØÏÈ¸üÒÂ£¬ÔÚÎ¹Ê³¡¢±§Ó¤Ó×¶ùÇ°£¬¼Ò³¤Ó¦ÒÔ·ÊÔíÕýÈ·Ï´ÊÖ£¬½µµÍ³¦²¡¶¾´«²¥µÄ»ú»á¡£ ¸ù¾Ý¼²¹ÜÊð¼à²â×ÊÁÏÏÔÊ¾£¬5ÔÂ12ÈÕÖÁ5ÔÂ18ÈÕ¹úÄÚ³¦²¡¶¾ÃÅ¼±Õï¾ÍÕïÈË´Î¹²¼Æ8,549ÈË£¬½ÏÇ°Ò»ÖÜÔö¼Ó19%£¬½üÆÚ¾ÍÕïÈË´ÎÓÐ³ÖÐøÉÏÉýÇ÷ÊÆ¡£2019ÄêÀÛ¼Æ11Àý³¦²¡¶¾²¢·¢ÖØÖ¢²¡Àý£¬ÒÔ¸ÐÈ¾³¦²¡¶¾71ÐÍÎª¶à£¨5Àý£©£¬ÆäËû·Ö±ð¸ÐÈ¾³¦²¡¶¾D68ÐÍ£¨2Àý£©¡¢¿ËÉ³ÆæA9ÐÍ¡¢¿ËÉ³ÆæA10ÐÍ¡¢¿ËÉ³ÆæB5ÐÍ¡¢ÒÁ¿Æ²¡¶¾11ÐÍ¡£</p>
-<p>¼²¹ÜÊðÒ²ºôÓõ£¬5ËêÒÔÏÂÓ¤Ó×¶ùÎª³¦²¡¶¾²¢·¢ÖØÖ¢¸ßÎ£ÏÕÈº£¬Ò»µ©³öÏÖÊÈË¯¡¢ÒâÊ¶¸Ä±ä¡¢»î¶¯Á¦²»¼Ñ¡¢ºôÎü¼±´Ù»òÐÄÌø¼Ó¿ìµÈÖØÖ¢Ç°Õ×²¡Õ÷£¬ÈôÎ´¼°Ê±ÖÎÁÆÒ×Òý·¢ÄÔ¸ÉÄÔÑ×¡¢ÐÄÔàË¥½ßÓë·Î³öÑªµÈÖØÖ¢£¬ÌáÐÑÃñÖÚÓ¦ÁôÒâ¼ÒÖÐÓ×¶ù½¡¿µ£¬Èç·¢ÏÖÓÐÉÏÊöÇ°Õ×²¡Õ÷£¬Ó¦¾¡ËÙËÍ´óÒ½ÔºÖÎÁÆ¡£¡ó</p>
-<p>ÔðÈÎ±à¼­£ºÎÄÕý</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´05æœˆ21æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…èµ–çŽŸèŒ¹å°æ¹¾å°åŒ—æŠ¥å¯¼ï¼‰å°æ¹¾æ–°å¢ž3ä¾‹<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E8%82%A0%E7%97%85%E6%AF%92.md#1">è‚ ç—…æ¯’</a>å¹¶å‘<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E9%87%8D%E7%97%87.md#1">é‡ç—‡</a>ç—…ä¾‹ã€‚<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E7%96%BE%E7%AE%A1%E7%BD%B2.md#1">ç–¾ç®¡ç½²</a>è¡¨ç¤ºï¼Œ3åè‚ ç—…æ¯’å¹¶å‘é‡ç—‡ç—…ä¾‹åˆ†åˆ«ä¸ºåŒ—éƒ¨1å²ç”·ç«¥ã€ä¸­éƒ¨çš„æ–°ç”Ÿ<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E7%94%B7%E5%A9%B4.md#1">ç”·å©´</a>åŠå—éƒ¨6å²å¥³ç«¥ã€‚ä¸­éƒ¨æ–°ç”Ÿç”·å©´ä¸ºä»Šå¹´å¹´çºªæœ€å°çš„è‚ ç—…æ¯’é‡ç—‡ä¸ªæ¡ˆï¼Œç”·å©´åˆšå‡ºç”Ÿ5å¤©åŽï¼Œå‡ºçŽ°å‘çƒ§ã€æ´»åŠ¨åŠ›ä¸ä½³æƒ…å½¢ï¼Œç»æ£€éªŒå®¡æŸ¥ï¼Œç¡®è®¤ä¸ºä¼Šç§‘ç—…æ¯’11åž‹æ„ŸæŸ“å¹¶å‘é‡ç—‡ï¼Œç›®å‰æŒç»­åœ¨åŒ»é™¢æ²»ç–—ä¸­ã€‚</p>
+<p>åŒ—éƒ¨1å²ç”·ç«¥æœ‰å‘çƒ§ã€å‘•ååŠä¸‹è‚¢æ— åŠ›ç­‰ç—‡çŠ¶ï¼Œç»æ£€éªŒå®¡æŸ¥ï¼Œç¡®è®¤ä¸º<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E8%82%A0%E7%97%85%E6%AF%92.md#1">è‚ ç—…æ¯’</a>71åž‹æ„ŸæŸ“å¹¶å‘<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E9%87%8D%E7%97%87.md#1">é‡ç—‡</a>ï¼Œç›®å‰å·²å‡ºé™¢ï¼ŒæŒç»­é—¨è¯Šè¿½è¸ªã€‚å—éƒ¨6å²å¥³ç«¥åˆ™æœ‰å‘çƒ§ã€å‡ºç–¹ã€è¯´è¯æ¨¡ç³Šä¸æ¸…åŠæ­¥æ€ä¸ç¨³ç­‰ç—‡çŠ¶ï¼Œç»æ£€éªŒå®¡æŸ¥ï¼Œç¡®è®¤ä¸ºå…‹æ²™å¥‡A9åž‹ç—…æ¯’æ„ŸæŸ“å¹¶å‘é‡ç—‡ï¼Œæ‰€å¹¸æ¢å¤æƒ…å½¢è‰¯å¥½å¹¶å·²å‡ºé™¢ã€‚</p>
+<p><ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E7%96%BE%E7%AE%A1%E7%BD%B2.md#1">ç–¾ç®¡ç½²</a>é˜²ç–«åŒ»å¸ˆæž—å’é’è¡¨ç¤ºï¼Œè°ƒæŸ¥å‘çŽ°ï¼Œ3ä¸ªæ¡ˆä¸æŽ’é™¤æ˜¯å› åœ¨å…¬å…±åœºæ‰€æŽ¥è§¦æˆ–è¢«æ²¡æœ‰ç—‡å¾çš„æˆäººä¼ æŸ“ã€‚</p>
+<p>æž—å’é’æé†’ï¼Œå¤©æ°”é€æ¸å‡æ¸©ï¼Œè¿žå¸¦å½±å“è‚ ç—…æ¯’æ´»è·ƒåº¦ä¹Ÿæå‡ï¼Œå› æˆäººæ„ŸæŸ“è‚ ç—…æ¯’é€šå¸¸æ²¡æœ‰æ˜Žæ˜¾ç—‡çŠ¶ï¼Œè¾ƒå®¹æ˜“ç–äºŽé˜²æŠ¤è€Œä¼ æŸ“è‚ ç—…æ¯’ç»™å®¶ä¸­å¹¼å„¿ã€‚å»ºè®®æ°‘ä¼—å¤–å‡ºè¿”å®¶åŽï¼ŒåŠ¡å¿…å…ˆæ›´è¡£ï¼Œåœ¨å–‚é£Ÿã€æŠ±å©´å¹¼å„¿å‰ï¼Œå®¶é•¿åº”ä»¥è‚¥çš‚æ­£ç¡®æ´—æ‰‹ï¼Œé™ä½Žè‚ ç—…æ¯’ä¼ æ’­çš„æœºä¼šã€‚ æ ¹æ®ç–¾ç®¡ç½²ç›‘æµ‹èµ„æ–™æ˜¾ç¤ºï¼Œ5æœˆ12æ—¥è‡³5æœˆ18æ—¥å›½å†…è‚ ç—…æ¯’é—¨æ€¥è¯Šå°±è¯Šäººæ¬¡å…±è®¡8,549äººï¼Œè¾ƒå‰ä¸€å‘¨å¢žåŠ 19%ï¼Œè¿‘æœŸå°±è¯Šäººæ¬¡æœ‰æŒç»­ä¸Šå‡è¶‹åŠ¿ã€‚2019å¹´ç´¯è®¡11ä¾‹è‚ ç—…æ¯’å¹¶å‘é‡ç—‡ç—…ä¾‹ï¼Œä»¥æ„ŸæŸ“è‚ ç—…æ¯’71åž‹ä¸ºå¤šï¼ˆ5ä¾‹ï¼‰ï¼Œå…¶ä»–åˆ†åˆ«æ„ŸæŸ“è‚ ç—…æ¯’D68åž‹ï¼ˆ2ä¾‹ï¼‰ã€å…‹æ²™å¥‡A9åž‹ã€å…‹æ²™å¥‡A10åž‹ã€å…‹æ²™å¥‡B5åž‹ã€ä¼Šç§‘ç—…æ¯’11åž‹ã€‚</p>
+<p>ç–¾ç®¡ç½²ä¹Ÿå‘¼åï¼Œ5å²ä»¥ä¸‹å©´å¹¼å„¿ä¸ºè‚ ç—…æ¯’å¹¶å‘é‡ç—‡é«˜å±é™©ç¾¤ï¼Œä¸€æ—¦å‡ºçŽ°å—œç¡ã€æ„è¯†æ”¹å˜ã€æ´»åŠ¨åŠ›ä¸ä½³ã€å‘¼å¸æ€¥ä¿ƒæˆ–å¿ƒè·³åŠ å¿«ç­‰é‡ç—‡å‰å…†ç—…å¾ï¼Œè‹¥æœªåŠæ—¶æ²»ç–—æ˜“å¼•å‘è„‘å¹²è„‘ç‚Žã€å¿ƒè„è¡°ç«­ä¸Žè‚ºå‡ºè¡€ç­‰é‡ç—‡ï¼Œæé†’æ°‘ä¼—åº”ç•™æ„å®¶ä¸­å¹¼å„¿å¥åº·ï¼Œå¦‚å‘çŽ°æœ‰ä¸Šè¿°å‰å…†ç—…å¾ï¼Œåº”å°½é€Ÿé€å¤§åŒ»é™¢æ²»ç–—ã€‚â—‡</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæ–‡æ­£</p>
+
 <hr>
 
-#### Ô­ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/5/21/n11270735.htm">Ì¨ÐÂÔö3Àý³¦²¡¶¾ Äê¼Í×îÐ¡³õÉú5ÌìÄÐÓ¤¡¡</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/4/30/n11224343.htm">ÂéÕî³¬¼¶´«²¥Õß ÒÑ´«È¾¸ø10ÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/30/n11224460.htm">±±ÈÙÖÐÈÙ ÖÕÓÚÓÐ¿¹ËøÁ´Éß¶¾ÑªÇåÁË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/26/n11214655.htm">ÈËÈ¨ÂÉÊ¦¼ÍË¹×ðÐÌÂú±»Ö±ËÍÒ½Ôº ²¡ÇéÎ£¼±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/25/n11213849.htm">Ê¡¸®ÄâÈ¡Ïûº£Íâ½ô¼±Ò½ÁÆ±£ÏÕ¸£Àû</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/24/n11209369.htm">Âóµ±ÀÍÊåÊå½ÌÏ´ÊÖ Ô¶Àë³¦²¡¶¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/23/n11207184.htm">Ì¨³¦²¡¶¾ÖØÖ¢ÀÛ¼Æ6Àý 7ÄêÀ´ÐÂ¸ß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/17/n11192019.htm">»÷°Ü³¦²¡¶¾  Êª¡¢´ê¡¢³å¡¢Åõ¡¢²ÁÏ´ÊÖ5²½Öè</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/2/n11157689.htm">Ì¨ÉÏÖÜ³¦²¡¶¾¾ÍÕïÈË´Î ¸ßÓÚ½ü3ÄêÍ¬ÆÚ</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/5/20/n11269161.htm">¶íÂÞË¹²»ÈÃÖÐ¹²°ïÖúÐÞÀíº½Ä¸ Ô­ÒòÓÐÈý</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/20/n11269078.htm">±¨¸æ£º´óÅúÌÓÀë³¯ÏÊÅ®ÐÔÔÚÖÐ¹úÂÙÎªÐÔÅ«</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/20/n11269083.htm">ÈÎÕý·Ç¿Ú³ö¿ñÑÔÔâ´òÁ³ »ªÎªÃæÁÙ¶Ï´¶Î£»ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/19/n11267477.htm">¡¾·­Ç½±Ø¿´¡¿ÁõÊ¿ÓàÍ¶°¸ ²»Ñ°³£Ö®´¦ÖµµÃÍæÎ¶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/17/n11119102.htm">¡¾ÏÍºó´«¡¿Àú°Ë³¯»ÊµÛ Îå³¯¾ÓºóÎ»µÄÅ®ÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/14/n11258839.htm">½¯Î³¹ú±ôËÀÌåÑé Ç×ÑÛ¿´µ½¹ýÊÀµÄ¸¸Ç×½¯½éÊ¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/28/n11219079.htm">ÎÒÎªºÎ¶ÔËãÃü¸ÐÐËÈ¤£¿(ÏÂ)</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/9/27/n8343790.htm">¡¾Ç§¹ÅÓ¢ÐÛÈËÎï¡¿ÕÅÈý·á(7) Ì«¼«¶À²½ÌìÏÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/19/n11267125.htm">Ò»Á³·ßÅ­ ÐìÏþ¶¬46Ãë´ò°Ü¡°µãÑ¨´óÊ¦¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/19/n11267185.htm">ÖÐ¹²Ö¤¼à»áÔ­Ö÷Ï¯ÁõÊ¿Óà¡°Ö÷¶¯Í¶°¸¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/19/n11267309.htm">ÖÇÄÜÊÖ»úÊÐ³¡´óÕðº³ ´«¹È¸èÖÕÖ¹»ªÎªÓÃ°²×¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/14/n11258759.htm">¡¾ÐÂÎÅ¿´µã¡¿±±¾©±¨¸´ÐÔ¹ØË° ¶ÔÃÀÓ°Ïì¶à´ó£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/14/n11259003.htm">¡¾ÐÂÎÅ¿´µã¡¿Ó°Æ¬¡°·çÔÆ¡±ÎªºÎ±»³·ÓÖ½â½û£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/15/n11261490.htm">¡¾ÐÂÎÅ¿´µã¡¿¹ÙÃ½É¿¶¯ÈËÃñÕ½ ÍøÃñºô±»°ó¼Ü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/19/n11267357.htm">ÔâÖÐ¹²¹ÙÃ½µãÃûÅÚºä ·¶±ù±ù¸´³ö»òÌí±äÊý</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/19/n11267325.htm">¡¶È¨Á¦µÄÓÎÏ·¡·²¥´ó½á¾Ö »òÒýÃÀ¹úÇ§ÍòÈËÇÌ°à</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/19/n11266650.htm">¡¶±ùÓë»ð¡··ÛË¿ÇëÔ¸ Ï£ÍûHBOÖØÅÄµÚ°Ë¼¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/20/n11269250.htm">ÖÐÃÀÃ³Ò×Õ½ÑÓÉÕ ËïºìÀ×Ö÷ÑÝµçÊÓ¾çÔâ³·µµ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/19/n11267234.htm">ÖÜÈó·¢ÂÊÓÑÈËÅÀÉ½ÇìÉú Ô¬Ó½ÒÇ·ò¸¾µÈÖÚÐÇ×£¸£</a></li>
-</td><td VALIGN=TOP><a href="https://github.com/szzd1/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/szzd1/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/szzd1/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/19/4/2/n11157689.md#1">å°ä¸Šå‘¨è‚ ç—…æ¯’å°±è¯Šäººæ¬¡ é«˜äºŽè¿‘3å¹´åŒæœŸ</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/19/4/17/n11192019.md#1">å‡»è´¥è‚ ç—…æ¯’  æ¹¿ã€æ“ã€å†²ã€æ§ã€æ“¦æ´—æ‰‹5æ­¥éª¤</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/19/4/23/n11207184.md#1">å°è‚ ç—…æ¯’é‡ç—‡ç´¯è®¡6ä¾‹ 7å¹´æ¥æ–°é«˜</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/19/4/24/n11209369.md#1">éº¦å½“åŠ³å”å”æ•™æ´—æ‰‹ è¿œç¦»è‚ ç—…æ¯’</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/19/4/25/n11213849.md#1">çœåºœæ‹Ÿå–æ¶ˆæµ·å¤–ç´§æ€¥åŒ»ç–—ä¿é™©ç¦åˆ©</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/19/4/26/n11214655.md#1">äººæƒå¾‹å¸ˆçºªæ–¯å°Šåˆ‘æ»¡è¢«ç›´é€åŒ»é™¢ ç—…æƒ…å±æ€¥</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/19/4/30/n11224343.md#1">éº»ç–¹è¶…çº§ä¼ æ’­è€… å·²ä¼ æŸ“ç»™10äºº</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/19/4/30/n11224460.md#1">åŒ—è£ä¸­è£ ç»ˆäºŽæœ‰æŠ—é”é“¾è›‡æ¯’è¡€æ¸…äº†</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216108.md#1">åœŸè€³å…¶æ–‡åŒ–æ—…æ¸¸éƒ¨ï¼šæ­£ç­‰å¾…å°æ¹¾å®¢äºº</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216090.md#1">å°ç«¯åˆæ”¶å‡9è·¯æ®µæ˜“å¡ž ä¼°å›½5å¡žè½¦10å°æ—¶</a></li>
+<hr>
+
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10101129.md#1" target="_blank">æž—è¾‰ï¼šæ²ˆé˜³é›ªå †ä¸­åƒä½™è‹å†›å°¸ä½“èƒŒåŽçš„æš´è¡Œ</a></li><li><a href="https://github.com/nuje2873/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/5/n11769925.md#1" target="_blank">è§è¯å¤§æ³•è¶…å¸¸ å±ä¸œæ³•è½®åŠŸå­¦å‘˜åœ¨æ³•ä¸­ç†”ç‚¼</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12212964.md#1">ã€å†…å¹•ã€‘çŽ‹å²å±±æ±ªæ´‹ä¸Žç¾Žæ–¹äº¤æ‰‹ é“©ç¾½è€Œå½’</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12213782.md#1">æ—¥ç±æŸ“ç–«å­¦ç”ŸæŽ¥è§¦è€…å…¨é˜´æ€§ åº„äººç¥¥ï¼šæœ‰2ç§å¯èƒ½</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12215064.md#1">å¤§é™†æ´ªç¾ å°å•†è¢«ä»¤é™æœŸæé’± ä¸å ªé‡è´Ÿå›žå°</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214374.md#1">30ä¸‡ç‡•éƒŠäººåƒè¼èšçˆ¬å‘åŒ—äº¬ æ–‡ç« è¢«åˆ </a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214505.md#1">ååˆ¶é¦™æ¸¯å›½å®‰æ³• ç¾Žå®£å¸ƒé™åˆ¶ä¸­å…±å®˜å‘˜ç­¾è¯</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/24/n12210389.md#1">æŽè‹±çˆ±æ™’9å²é¾™å‡¤èƒŽè¿‘ç…§ åŽ¨è‰ºèŽ·ç½‘å‹å¤¸èµž</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12212204.md#1">å‘¨æ˜Ÿé©°å¯¹èµŒå¤±è´¥ æŠµæŠ¼11äº¿è±ªå®…å‘¨è½¬èµ„é‡‘</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12212762.md#1">å¼€å·¥å·§é‡å‘¨æ¶¦å‘ é‚æ´æ¥¹æ¿€åŠ¨åˆ°åˆç…§ä¸çŸ¥æœ›é•œå¤´</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12212271.md#1">å‘¨æ˜Ÿé©°æŠµæŠ¼è±ªå®…ä¼ è´¢å›° å¾¡ç”¨é…è§’é»„ä¸€å±±å›žåº”</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214760.md#1">éƒ‘æ•¬åŸºå‰ªTVBå·¥ä½œè¯ ååŒè·¯è‰ºäººç«™æ¸¯äººä¸€è¾¹</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/5/n12163931.md#1">ã€å‘½ç†ã€‘48å²æ‰èµ·è¿çš„å¤§å™¨æ™šæˆä¹‹å‘½</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/5/15/n12112533.md#1">è¿èƒŒåŽŸè‘—çš„å®çŽ‰å¨¶äº²</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/5/23/n12131668.md#1">ã€åº·ç†™å¤§å¸ã€‘é³Œæ‹œçŠ¯ä¸Š å›è‡£äº¤é”‹</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/14/n12183964.md#1">ã€æ–‡å²ã€‘å¤ç±ä¸­å¤šå§¿å¤šå½©çš„ç«¯åˆèŠ‚ç²½</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/24/n12209159.md#1">ç«¯åˆï¼šçº¯é˜³æ­£æ°”è¾Ÿé˜´é‚ª</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/nuje2873/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/nuje2873/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/5/21/n11270735.htm">å°æ–°å¢ž3ä¾‹è‚ ç—…æ¯’ å¹´çºªæœ€å°åˆç”Ÿ5å¤©ç”·å©´ã€€</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nuje2873/djy/blob/master/gb/19/5/21/n11270735.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/nuje2873/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/nuje2873/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/nuje2873/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
